<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadFiles</string>

    <!-- Action Bar menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search cases</string>
    <string name="action_new">New case</string>
    <string name="action_delete">Delete case</string>
    <string name="action_discard">Discard changes</string>
    <string name="action_edit">Edit case</string>
    <string name="action_camera">Add image</string>
    <string name="action_share">Share</string>
    <string name="action_star">Favorite</string>
    <string name="action_select_all">Select all</string>
    <string name="action_edit_caption">Edit caption</string>
    <string name="action_help">Help</string>

    <!-- Activity Titles -->
    <string name="title_activity_case_card_list">RadFiles</string>
    <string name="title_activity_search">Search</string>
    <string name="title_case_detail">RAD Files</string>
    <string name="title_activity_add_case">Add Case</string>
    <string name="title_activity_edit_case">Edit Case</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="title_activity_import_export">RAD Import &amp; Export</string>
    <string name="title_activity_manage_lists">RAD Lists</string>
    <string name="title_activity_case_import">RAD Import</string>

    <!-- Text Field Prompt Strings -->
    <string name="case_id_prompt">Case number</string>
    <string name="section_prompt">Choose sections</string>
    <string name="studyType_prompt">Choose modality</string>
    <string name="keyWords_prompt">Choose key words</string>
    <string name="date_prompt">Study date</string>
    <string name="button_save">Save</string>
    <string name="button_discard">Discard</string>
    <string name="button_OK">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="Body">Body</string>
    <string name="Neuro">Neuro</string>
    <string name="Chest">Chest</string>
    <string name="Ultrasound">Ultrasound</string>
    <string name="Nuclear">Nuclear</string>
    <string name="MSK">MSK</string>
    <string name="title_activity_google_drive_create_file">GoogleDriveCreateFile</string>

    <!-- Spinner List of sorting/filters -->
    <string-array name="actionbar_sort_list">
        <item>By Section</item>
        <item>Last Modified</item>
        <item>Study Date</item>
        <item>Modality</item>
        <item>Key Words</item>
    </string-array>

    <!-- Searchview prompt -->
    <string name="search_prompt">Search for cases</string>

    <!-- Navigation Drawer Strings -->
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="action_clear_cache">Clear cache</string>

    <string name="navigation_drawer_item_cases_header">RAD FILES</string>
    <string name="navigation_drawer_item_cases_all">All Cases</string>
    <string name="navigation_drawer_item_cases_fav">Favorites</string>
    <string name="navigation_drawer_item_cases_followup">Follow Up</string>
    <string name="navigation_drawer_item_cases_section">Sections</string>
    <string name="navigation_drawer_item_import_export">Import &amp; Export</string>
    <string name="navigation_drawer_item_lists">Manage Lists</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="navigation_drawer_item_about">About</string>

    <!-- Preferences -->




<!--
    <item>*Procedure Log</item>
    <item>*Favorites</item>
    -->
    <string-array name="nav_drawer_array">
        <item>Interesting Cases</item>
        <item>Import &amp; Export</item>
        <item>Manage Lists</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- Search category headers -->
    <string-array name="search_categories_array">
        <item>Patient ID</item>
        <item>Diagnosis</item>
        <item>Findings</item>
        <item>Key Words</item>
        <item>Modality</item>
        <item>Biopsy</item>
        <item>Follow Up</item>
        <item>Comments</item>
    </string-array>

    <!-- Manage Lists: tab titles -->
    <string-array name="list_tab_titles_array">
        <item>Key Words</item>
        <item>Modalities</item>
        <item>Sections</item>
    </string-array>

    <string-array name="browser_search_array">
        <item>Google</item>
        <item>Radiopaedia</item>
        <item>Wikipedia</item>
    </string-array>


    <!--Firebase auth ID-->
    <string name="facebook_app_id">973701769395589</string>


    <!-- test for material drawer -->
    <!-- Drawer Items -->

    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>

    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>

    <string name="drawer_item_compact_header">CompactHeader Drawer</string>

    <string name="drawer_item_compact_header_desc">Smaller account header</string>

    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>

    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>

    <string name="drawer_item_multi_drawer">Multi Drawer</string>

    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>

    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>

    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>

    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>

    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>

    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>

    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>

    <string name="drawer_item_mini_drawer">MiniDrawer</string>

    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>

    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>

    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>

    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>

    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>

    <string name="drawer_item_menu_drawer">Menu Drawer</string>

    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>

    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>

    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>

    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>

    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>

    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>

    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>



    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>

    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>



    <string name="drawer_item_home">Home</string>

    <string name="drawer_item_free_play">Free Play</string>

    <string name="drawer_item_custom">Custom</string>

    <string name="drawer_item_section_header">Section Header</string>

    <string name="drawer_item_settings">Settings</string>

    <string name="drawer_item_help">Help</string>

    <string name="drawer_item_open_source">Open Source</string>

    <string name="drawer_item_contact">Contact</string>


</resources>
