<?xml version="1.0"?>

    <menu tools:context="com.huantnguyen.radcases.app.CaseDetailActivity$CaseDetailFragment" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Toggle favorites "star", should appear as action button -->
    <item android:title="@string/action_star" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_not_important" android:id="@+id/action_star"/>

    <!-- Add image to this case, should appear as action button -->
    <item android:title="@string/action_camera" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_camera" android:id="@+id/action_camera"/>

    <!-- Edit this case, should appear as action button -->
    <item android:title="@string/action_edit" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_edit" android:id="@+id/action_edit"/>

    <!-- Delete this case, should appear as action button -->
    <item android:title="@string/action_delete" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_discard" android:id="@+id/action_delete"/>

    <!-- Search, should appear as action button -->
    <item android:title="@string/action_search" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_search" android:id="@+id/action_search"/>

    <!-- Settings, should always be in the overflow -->
    <item android:title="@string/action_settings" android:showAsAction="never" android:id="@+id/action_settings"/>

</menu>