<?xml version="1.0"?>

    <menu tools:context="com.radicalpeas.radfiles.app.CaseEditActivity" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="@string/action_camera" app:showAsAction="ifRoom" android:icon="@drawable/ic_camera_white_24dp" android:id="@+id/menu_camera"/>

    <!-- Discard changes, should appear as action button -->
    <item android:title="@string/action_discard" app:showAsAction="never" android:icon="@drawable/ic_close_grey600_24dp" android:id="@+id/menu_discard"/>

    <!-- Delete this case, should appear as action button -->
    <item android:title="@string/action_delete" app:showAsAction="never" android:icon="@drawable/ic_delete_grey600_24dp" android:id="@+id/menu_delete"/>

</menu>