<?xml version="1.0"?>

    <menu tools:context="com.huantnguyen.radcases.app.CaseCardListActivity" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:radcases="http://schemas.android.com/apk/res-auto">

    <!-- Search, should appear as action button -->
    <item android:title="@string/action_search" radcases:actionViewClass="android.support.v7.widget.SearchView" radcases:showAsAction="ifRoom" android:icon="@drawable/ic_action_search" android:id="@+id/menu_search"/>

    <!-- Add new case, should appear as action button -->
    <item android:title="@string/action_new" radcases:showAsAction="ifRoom" android:icon="@drawable/ic_plus_box_white_36dp" android:id="@+id/menu_addnew"/>



    <!-- Settings, should always be in the overflow -->
    <item android:title="@string/action_settings" radcases:showAsAction="never" android:id="@+id/menu_settings"/>

</menu>