<?xml version="1.0"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_save_discard"/>
    <include layout="@layout/toolbar_dropshadow"/>

    <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/edit_scrollview"
                android:layout_below="@id/toolbar"
                tools:context="com.huantnguyen.radcases.app.CaseEditActivity$PlaceholderFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/fields_container"
            >

            <requestFocus/>

            <!-- CASE INFO -->
            <TextView
                android:id="@+id/CaseInfoLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Case Information"/>

            <EditText
                android:id="@+id/edit_patient_id"
                style="@style/sectionEditText"
                android:hint="@string/patient_id_prompt"
                />

            <EditText
                android:id="@+id/edit_diagnosis"
                style="@style/sectionEditText"
                android:hint="Diagnosis"
                android:inputType="textCapWords|textNoSuggestions"/>

            <EditText
                android:id="@+id/edit_findings"
                style="@style/sectionEditText"
                android:hint="Imaging findings"/>

            <!-- Radiology Section -->
            <TextView
                android:id="@+id/SectionLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Radiology Section"/>

            <com.huantnguyen.radcases.app.SpinnerMultiSelect
                android:id="@+id/edit_section"
                style="@style/customSpinnerStyle"
                android:prompt="@string/section_prompt"/>

            <!-- STUDIES -->
            <TextView
                android:id="@+id/StudyLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Studies"/>

            <LinearLayout
                android:id="@+id/study_types_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.huantnguyen.radcases.app.SpinnerCustom
                    android:id="@+id/edit_study_type"
                    style="@style/customSpinnerStyle"
                    android:prompt="@string/studyType_prompt"/>

                <Button
                    android:id="@+id/edit_date"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dip"
                    android:textSize="@dimen/standardTextSize"
                    android:textColor="@color/dark_grey_text"
                    android:hint="@string/date_prompt"
                    android:onClick="onClick_showDatePicker"/>


            </LinearLayout>

            <!--
            <Button
                android:id="@+id/add_new_study_button"
                android:layout_width="match_parent"
                style="?android:buttonBarButtonStyle"
                android:layout_height="@dimen/text_box_height"
                android:text="Add new"
                android:gravity="left|center_vertical"
                android:textColor="@color/light_grey_text"
                android:onClick="onClick_Button"/>
            -->

            <!-- KEY WORDS -->
            <TextView
                android:id="@+id/KeyWordsLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Key Words"/>

            <com.huantnguyen.radcases.app.SpinnerMultiSelect
                style="@style/customSpinnerStyle"
                android:id="@+id/edit_key_words"
                android:prompt="@string/keyWords_prompt"/>

            <!-- BIOPSY -->
            <TextView
                android:id="@+id/BiopsyLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Biopsy"/>

            <EditText
                android:id="@+id/edit_biopsy"
                style="@style/sectionEditText"
                android:hint="Biopsy proven pathology"
                />

            <!-- FOLLOW UP -->
            <TextView
                android:id="@+id/FollowupLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Follow Up"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkbox_followup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick_Checkbox"
                />
            <EditText
                android:id="@+id/edit_followup"
                style="@style/sectionEditText"
                android:hint="Reason for followup"
                />
            </LinearLayout>

            <!-- COMMENTS -->
            <TextView
                android:id="@+id/CommentsLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"
                android:text="Comments"/>

            <EditText
                android:id="@+id/edit_comments"
                style="@style/sectionEditText"
                android:hint="Other details"
                />

            <!-- IMAGES -->
            <TextView
                android:id="@+id/ImagesLabel"
                style="@style/sectionHeader"
                android:paddingLeft="2dp"

                android:text="Key Images"/>

            <GridView
                android:id="@+id/key_image"
                style="@style/imageGridView"
                />

        </LinearLayout>

    </ScrollView>

    <!-- BUTTON BAR
    <LinearLayout
    android:id="@+id/buttonBar"
    style="?android:buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="@color/default_button_background"
    android:layout_alignParentBottom="true">

    <Button
        android:id="@+id/cancelButton"
        style="?android:buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick_Button"
        android:text="@string/button_cancel"/>


    <Button
        android:id="@+id/doneButton"
        style="?android:buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick_Button"
        android:text="@string/button_save"/>
    </LinearLayout>
    -->
</RelativeLayout>